[package]
name = "tcbscans"
version = "0.1.0"
description = "Download manga chapters from TCBScans"
homepage = "https://github.com/minormending/tcbscans"
repository = "https://github.com/minormending/tcbscans"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["manga", "tcbscans", "one-piece", "attack-on-titan", "bleach"]
categories = ["command-line-utilities"]

[dependencies]
minreq = { version = "2", features = ["https"] }
regex = "1"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
imagequant = "4"
lodepng = "3.6"
rayon = "1.5"